[package]
name = "rustyknife"
description = "Fast, robust and safe email parsing library"
version = "0.2.0"
authors = ["Jonathan Bastien-Filiatrault <jonathan@zerospam.ca>"]
edition = "2018"
homepage = "https://github.com/zerospam/rustyknife"
repository = "https://github.com/zerospam/rustyknife.git"
license = "GPL-3.0+"
readme = "README.md"
categories = ["email", "parsing", "network-programming", "encoding"]

[badges]
travis-ci = { repository = "zerospam/rustyknife" }
codecov = { repository = "zerospam/rustyknife", service = "github" }

[features]
default = ["quoted-string-rfc2047", "python"]
quoted-string-rfc2047 = []
python = ["memmap", "pyo3"]

[lib]
name = "rustyknife"
crate-type = ["cdylib", "rlib"]

[dependencies]
encoding = "0.2"
nom = "5.0"
base64 = "0.10"

memmap = { version = "0.7.0", optional=true }
pyo3 = { version = "0.7", features = ["extension-module"], optional=true }

[profile.release]
panic = "abort"
