[package]
name = "rustyknife"
description = "Fast, robust and safe email parsing library"
version = "0.2.10"
authors = ["Jonathan Bastien-Filiatrault <jonathan@zerospam.ca>"]
edition = "2018"
homepage = "https://github.com/zerospam/rustyknife"
repository = "https://github.com/zerospam/rustyknife.git"
license = "GPL-3.0+"
readme = "README.md"
categories = ["email", "parsing", "network-programming", "encoding"]
exclude = ["sphinx/source/*.so"]

[badges]
travis-ci = { repository = "zerospam/rustyknife" }
codecov = { repository = "zerospam/rustyknife", service = "github" }

[features]
default = ["quoted-string-rfc2047"]
quoted-string-rfc2047 = []
python = ["memmap", "pyo3"]
nightly = []
fuzz = ["afl"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
encoding = "0.2"
nom = "5.0"
base64 = "0.12"
idna = "0.2.0"
serde = { version = "1.0", features = ["derive"], optional=true }

memmap = { version = "0.7.0", optional=true }
pyo3 = { version = "0.11", features = ["extension-module"], optional=true }
afl = { version = "0.8", optional=true }

[[bin]]
name = "fuzz_mailbox"
required-features = ["fuzz"]

[profile.release]
panic = "abort"

[package.metadata.docs.rs]
features = ["nightly"]
